tests/errors/test_73.x
// Only one type in tuple type

fn main() -> void {

	let x: (i32);

}
